<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/dialogx__line1"
        style="@style/style_btn_option"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="15sp"
        android:background="@drawable/black_button_white_selector"
        android:text="@string/connections_camera" />

    <Button
        android:id="@+id/dialogx__line2"
        style="@style/style_btn_option"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/black_button_white_selector"
        android:text="@string/connections_gallary" />

    <Button
        android:id="@+id/dialogx__line4"
        style="@style/style_btn_option"
        android:layout_marginBottom="15sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="20sp"
        android:textColor="@color/grey"
        android:background="@drawable/gray_button_white_selector"
        android:text="@string/btn_cancel" />

</LinearLayout>