<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_margin"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_ok">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/wrapper_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:padding="@dimen/standard_margin"
                        app:errorTextAppearance="@style/error_appearance">

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/ten_atm"
                            android:inputType="text"
                            android:textSize="@dimen/font_size_14" />
                    </android.support.design.widget.TextInputLayout>




                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/wrapper_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:padding="@dimen/standard_margin"
                        app:errorTextAppearance="@style/error_appearance">

                        <EditText
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:cursorVisible="false"
                            android:hint="@string/address"
                            android:inputType="text"
                            android:textSize="@dimen/font_size_14" />
                    </android.support.design.widget.TextInputLayout>




                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_lng"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:padding="@dimen/standard_margin"
                        app:errorTextAppearance="@style/error_appearance">

                        <EditText
                            android:id="@+id/lng"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="@string/kinhdo"
                            android:inputType="phone"
                            android:textSize="@dimen/font_size_14" />

                    </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_lat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/standard_margin"
                    app:errorTextAppearance="@style/error_appearance">

                    <EditText
                        android:id="@+id/lat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/vido"
                        android:inputType="phone"
                        android:textSize="@dimen/font_size_14" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </ScrollView>

        <com.ipos.restaurant.customview.TextViewOpenSanRegular
            android:id="@+id/add_atm"
            style="@style/style_btn_yesno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/standard_margin_double"
            android:layout_marginRight="@dimen/standard_margin_double"

            android:layout_marginTop="@dimen/standard_margin"
            android:background="@drawable/red_button_white_selector"
            android:gravity="center"
            android:text="@string/btn_themmoi" />
    </RelativeLayout>


</RelativeLayout>